unpackaged/main/default/objects/oAuth__c/oAuth__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>oAuth Settings</label>
</CustomObject>