unpackaged/main/default/objects/oAuth__c/fields/Auth_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Auth_Endpoint__c</fullName>
    <label>Auth Endpoint</label>
    <type>Url</type>
</CustomField>