unpackaged/main/default/objects/oAuth__c/fields/DataComURL__c.field-meta.xml
<CustomField>
    <fullName>DataComURL__c</fullName>
    <label>DataComURL</label>
    <length>250</length>
    <type>Text</type>
</CustomField>