unpackaged/main/default/objects/oAuth__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>150</length>
    <type>Text</type>
</CustomField>