unpackaged/main/default/objects/oAuth__c/fields/SecurityAccount__c.field-meta.xml
<CustomField>
    <fullName>SecurityAccount__c</fullName>
    <label>SecurityAccount</label>
    <length>150</length>
    <type>Text</type>
</CustomField>