unpackaged/main/default/objects/oAuth__c/fields/UsernameAccount__c.field-meta.xml
<CustomField>
    <fullName>UsernameAccount__c</fullName>
    <label>UsernameAccount</label>
    <length>225</length>
    <type>Text</type>
</CustomField>